--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,3 @@
 afs:
- name: nagendra kumar mishra from github version 1.0
+ name: nagendra kumar mishra from github version 1.0 local repository
+ 
