added new file according to environment specific

--- a/application-test.yml
+++ b/application-test.yml
@@ -1,2 +1,2 @@
 afs:
- name: I am inside application test environment..................
+ name: I am inside application test environment..................1.0
