--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,2 +1,2 @@
 afs:
- name: I am inside application dev environment..................
+ name: I am inside application dev environment..................1.0
