updated with some configuration 2.0

--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,2 +1,2 @@
 afs:
- name: I am inside application dev environment..................1.0
+ name: I am inside application dev environment updation with some values.....................2.0
