updated with some configuration 3.0

--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,2 +1,2 @@
 afs:
- name: I am inside application dev environment updation with some values.....................2.0
+ name: external configuration using config server in development environment...............3.0
