updation according to new value

--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,2 +1,2 @@
 afs:
- name: external configuration using config server in development environment...............3.0
+ name: git hub application.yml message information from "development environment" version .......................4.0
