--- a/application-test.yml
+++ b/application-test.yml
@@ -1,2 +1,2 @@
 afs:
- name: I am inside application test environment..................1.0
+ name: git hub application.yml message information from "testing environment" version .......................4.0
