--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,2 @@
 afs:
- name: I am inside from git repository........1.0
+ name: git hub application.yml message information from "default message" version ........................2.0
