--- a/boot-hello-world.yml
+++ b/boot-hello-world.yml
@@ -1,2 +1,2 @@
 afs:
- name: boot hello world environment..........................
+ name: git hub application.yml message information from "boot hello world application" version .......................4.0
