initial commit by devloper2

--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,5 @@
 afs:
  name: git hub application.yml message information from "default message" version ........................6.0
+ hshhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+ dshhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+ dshhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
